Kubernetes/CKA Stuff/Ingress/pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: myapp
  namespace: testing
  labels:
    name: myapp
spec:
  containers:
  - name: myapp
    image: nginx
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    ports:
      - containerPort: 80
        name: http
