Kubernetes/CKA Stuff/Ingress/nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: hello
  namespace: testing
spec:
  type: NodePort
  selector:
    app: myapp
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30007
